upd: corrected hovering bug for selectbtn and spacings for input-container

--- a/site/style.css
+++ b/site/style.css
@@ -62,26 +62,18 @@ button {
 }
 
 /* Style the active class, and buttons on mouse-over */
-.active {
+.selectBtn:hover, .active {
     background-color: #666;
     color: white;
-}
-
-.selectBtn:hover {
     transition: 0.4s;
-    background-color: rgb(156, 160, 161);
-    color: white;
 }
 
 .input-container {
-    width: 260px;
     font-size: 17px;
     padding: 8px;
-    /* display: flex;
+    display: flex;
     align-items: center;
-    flex-direction: column; */
-    margin-left: auto;
-    margin-right: auto;
+    flex-direction: column;
 }
 
 #iText, #jText, #nText {
